--- a/css/estilos.css
+++ b/css/estilos.css
@@ -38,7 +38,7 @@ form input, form textarea{
 /*Background SVG*/
 .bgsvgUp {
   height: 300px;
-  background-image: url(/img/polygon-scatter-haikei.svg);
+  background-image: url(/img/svg/polygon-scatter-haikei.svg);
   background-repeat: repeat-x;
   background-size: cover;
   background-color: #212529;
@@ -79,6 +79,17 @@ form input, form textarea{
   margin-bottom: 0;
 }
 
-.sec-01, .sec-02, .sec-03, .sec-04{
+section{
   margin: 60px 0px !important;
 } 
+
+/* profile photo */
+.profile-photo{
+  width: 50%;
+}
+.descrip-me{
+  margin-top: 30px;
+}
+.img-transfer{
+  width: 80%;
+}
