Adding matrix effect in hero

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,23 +1,27 @@
 .nav-link {
   color: #efefef !important;
-  font-family: 'Anton', sans-serif;
+  font-family: "Anton", sans-serif;
   letter-spacing: 2px;
-  padding-left: 10px !important; }
-  .nav-link:hover {
-    background-color: #efefef;
-    color: #212529 !important;
-    border-radius: 5px; }
+  padding-left: 10px !important;
+}
+.nav-link:hover {
+  background-color: #efefef;
+  color: #212529 !important;
+  border-radius: 5px;
+}
 
 /*FOOTER*/
 .footer-basic {
   padding: 40px 0;
-  background-color: #161a1d !important; }
-  .footer-basic .copyright {
-    margin-top: 15px;
-    text-align: center;
-    font-size: 13px;
-    color: #efefef;
-    margin-bottom: 0; }
+  background-color: #161a1d !important;
+}
+.footer-basic .copyright {
+  margin-top: 15px;
+  text-align: center;
+  font-size: 13px;
+  color: #efefef;
+  margin-bottom: 0;
+}
 
 /* Icons */
 .knowledge i {
@@ -29,15 +33,18 @@
   text-align: center;
   border-radius: 50%;
   margin: 0 8px;
-  color: #efefef; }
+  color: #efefef;
+}
 
 .social {
   text-align: left;
-  padding-bottom: 25px; }
+  padding-bottom: 25px;
+}
 
 .social-footer {
   text-align: center;
-  padding-bottom: 25px; }
+  padding-bottom: 25px;
+}
 
 .social-footer a, .social a {
   font-size: 24px;
@@ -49,65 +56,141 @@
   border-radius: 50%;
   border: 1px solid #efefef;
   margin: 0 8px;
-  color: #efefef; }
+  color: #efefef;
+}
 
 .social > a:hover, .social-footer > a:hover {
   background-color: #dfac13;
-  border-color: #dfac13; }
+  border-color: #dfac13;
+}
 
+@media only screen and (max-width: 600px) {
+  .social {
+    text-align: center;
+  }
+}
 h1 {
-  font-family: 'Anton', sans-serif;
+  font-family: "Anton", sans-serif;
   color: #efefef;
-  margin-bottom: 10px !important; }
+  margin-bottom: 10px !important;
+}
 
 h3 {
   color: #efefef;
-  font-family: 'Open Sans', sans-serif; }
+  font-family: "Open Sans", sans-serif;
+}
 
 p {
-  color: #efefef; }
+  color: #efefef;
+}
 
 .titulo {
-  margin-bottom: 20px; }
+  margin-bottom: 20px;
+}
 
 .navbar-brand {
-  color: #efefef !important; }
+  color: #efefef !important;
+}
 
 .btn-portafolio {
   border-radius: 10px;
   border: 2px solid #dfac13 !important;
-  margin-right: 10px; }
-  .btn-portafolio:hover {
-    background-color: #dfac13; }
+  margin-right: 10px;
+}
+.btn-portafolio:hover {
+  background-color: #dfac13;
+}
 
 .btn {
   color: #efefef;
   padding: 5px 20px;
-  font-weight: bold; }
-  .btn:hover {
-    color: #212529; }
+  font-weight: bold;
+}
+.btn:hover {
+  color: #212529;
+}
 
 .form-contact input, .form-contact textarea {
-  margin: 10px 0px; }
+  margin: 10px 0px;
+}
 
-html, body {
-  max-width: 100% !important;
-  overflow-x: hidden !important;
-  background-color: #212529; }
+.image-profile {
+  max-width: 400px !important;
+  border-radius: 50%;
+  margin-top: 60px;
+}
 
-strong {
-  color: #dfac13; }
+@media only screen and (max-width: 600px) {
+  .image-profile {
+    display: none;
+  }
+}
+.img-trabajos {
+  border-radius: 10px;
+}
+
+.image-me {
+  max-width: 200px;
+  border-radius: 10px;
+}
+
+.hero-name {
+  margin-top: 120px;
+}
 
 #sec-00 {
   margin-top: 100px;
-  height: 600px; }
+  height: 600px;
+  position: absolute;
+  left: 30%;
+  top: 10%;
+}
+
+@media (min-width: 320px) and (max-width: 480px) {
+  .hero-name {
+    margin-top: 0;
+    text-align: center;
+  }
+
+  #sec-00 {
+    margin-top: 100px;
+    height: 400px;
+    position: absolute;
+    left: 10%;
+    top: 5%;
+  }
+}
+@media (min-width: 768px) and (max-width: 1024px) {
+  .hero-name {
+    margin-top: 0;
+    text-align: center;
+  }
+
+  #sec-00 {
+    margin-top: 100px;
+    height: 400px;
+    position: absolute;
+    left: 10%;
+    top: 15%;
+  }
+}
+html, body {
+  max-width: 100% !important;
+  overflow-x: hidden !important;
+  background-color: #212529;
+}
+
+strong {
+  color: #dfac13;
+}
 
 hr {
   color: #dfac13;
-  margin: 100px 0; }
+  margin: 100px 0;
+}
 
-.hero-name {
-  margin-top: 120px; }
+.caja-sobre-mi {
+  margin-top: 100px;
+}
 
-.img-trabajos {
-  border-radius: 5px; }
+/*# sourceMappingURL=styles.css.map */
