--- a/scss/components/_icons.scss
+++ b/scss/components/_icons.scss
@@ -36,3 +36,9 @@
   background-color: $yellow-color;
   border-color: $yellow-color;
 }
+
+@media only screen and (max-width: 600px) {
+  .social {
+    text-align: center;
+  }
+}
