--- a/css/styles.css
+++ b/css/styles.css
@@ -102,7 +102,7 @@ nav {
   color: #efefef;
 }
 
-.social {
+.social-hero {
   text-align: left;
   padding-bottom: 25px;
 }
@@ -112,7 +112,7 @@ nav {
   padding-bottom: 25px;
 }
 
-.social-footer a, .social a {
+.social-footer a, .social-hero a {
   font-size: 24px;
   width: 40px;
   height: 40px;
@@ -123,27 +123,26 @@ nav {
   border: 1px solid #efefef;
   margin: 0 8px;
   color: #efefef;
+  transition: all 1s;
 }
 
-.social > a:hover, .social-footer > a:hover {
+.social-hero > a:hover, .social-footer > a:hover {
   background-color: #dfac13;
   border-color: #dfac13;
+  transform: rotate(360deg);
 }
 
-@media only screen and (max-width: 600px) {
-  .social {
-    text-align: center;
-  }
-}
 h1 {
   font-family: "Anton", sans-serif;
   color: #efefef;
-  margin-bottom: 10px !important;
+  letter-spacing: 2px;
+  margin-bottom: 10px;
 }
 
 h3 {
   color: #efefef;
   font-family: "Open Sans", sans-serif;
+  letter-spacing: 2px;
 }
 
 p {
@@ -154,26 +153,37 @@ p {
   margin-bottom: 20px;
 }
 
-.navbar-brand {
-  color: #efefef !important;
-}
-
 .btn-portafolio {
   border-radius: 10px;
-  border: 2px solid #dfac13 !important;
-  margin-right: 10px;
+  border: 2px solid #dfac13;
+  background-color: #212529;
+  padding: 10px 25px;
+  color: #efefef;
+  font-weight: 700;
+  font-family: "Arial";
+  letter-spacing: 1.5px;
 }
 .btn-portafolio:hover {
   background-color: #dfac13;
+  color: #212529;
+  cursor: pointer;
+  font-weight: 700;
 }
 
 .btn {
   color: #efefef;
-  padding: 5px 20px;
-  font-weight: bold;
+  padding: 10px 25px;
+  font-weight: 700;
+  font-family: "Arial";
+  background-color: #dfac13;
+  border-radius: 5px;
+  border: none;
+  letter-spacing: 2px;
 }
 .btn:hover {
   color: #212529;
+  cursor: pointer;
+  font-weight: 700;
 }
 
 .form-contact input, .form-contact textarea {
@@ -181,9 +191,10 @@ p {
 }
 
 .image-profile {
-  max-width: 400px !important;
+  width: 100%;
+  height: auto;
+  max-width: 300px;
   border-radius: 50%;
-  margin-top: 60px;
 }
 
 @media only screen and (max-width: 600px) {
@@ -200,6 +211,53 @@ p {
   border-radius: 10px;
 }
 
+.container-hero {
+  display: grid;
+  grid-template-columns: repeat(5, auto);
+  grid-template-rows: repeat(3, 0.2fr);
+  justify-content: center;
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  top: 30%;
+  left: 0;
+  right: 0;
+  text-align: center;
+}
+
+.container-hero div {
+  text-align: center;
+}
+
+.social-hero {
+  grid-area: 1/1/2/3;
+}
+
+.titulo-hero {
+  grid-area: 2/1/3/3;
+}
+
+.button-hero {
+  grid-area: 3/1/4/3;
+}
+
+.image-hero {
+  grid-area: 1/3/4/6;
+  padding: 0 80px;
+}
+
+@media only screen and (max-width: 600px) {
+  .container-hero {
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+    grid-template-rows: repeat(3, 0.2fr);
+    justify-content: center;
+  }
+
+  .image-hero {
+    display: none;
+  }
+}
 html, body {
   max-width: 100% !important;
   overflow-x: hidden !important;
