--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -1,39 +1,34 @@
-// .hero-name {
-//     margin-top: 120px;
-// }
-// #sec-00 {
-//     margin-top: 100px;
-//     height: 600px;
-//     position: absolute;
-//     left: 30%;
-//     top: 10%;
-// }
+.container-hero{
+    display: grid;
+    grid-template-columns: repeat(5, auto);
+    grid-template-rows: repeat(3, .2fr);
+    justify-content: center;
 
-// // Celulares
-// @media (min-width: 320px) and (max-width: 480px) {
-//     .hero-name {
-//         margin-top: 0;
-//         text-align: center;
-//     }
-//     #sec-00 {
-//         margin-top: 100px;
-//         height: 400px;
-//         position: absolute;
-//         left: 10%;
-//         top: 5%;
-//     }
-// }
-// // Tablet
-// @media (min-width: 768px) and (max-width: 1024px) {
-//     .hero-name {
-//         margin-top: 0;
-//         text-align: center;
-//     }
-//     #sec-00 {
-//         margin-top: 100px;
-//         height: 400px;
-//         position: absolute;
-//         left: 10%;
-//         top: 15%;
-//     }
-// }
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    top: 30%;
+    left: 0;
+    right: 0;
+    text-align: center;
+}
+.container-hero div{
+    text-align: center;
+}
+.social-hero{ grid-area: 1 / 1 / 2 / 3; }
+.titulo-hero{ grid-area: 2 / 1 / 3 / 3; }
+.button-hero{ grid-area: 3 / 1 / 4 / 3; }
+.image-hero { grid-area: 1 / 3 / 4 / 6; padding: 0 80px;}
+
+// Responsive
+@media only screen and (max-width: 600px) {
+    .container-hero{
+        display: grid;
+        grid-template-columns: repeat(2, auto);
+        grid-template-rows: repeat(3, .2fr);
+        justify-content: center;
+    }
+    .image-hero{
+        display: none;
+    }
+}
