--- a/scss/components/_images.scss
+++ b/scss/components/_images.scss
@@ -1,7 +1,9 @@
 .image-profile {
-    max-width: 400px !important;
+    width: 100%;
+    height: auto;
+    max-width: 300px;
     border-radius: 50%;
-    margin-top: 60px;
+    // margin-top: 60px;
 }
 @media only screen and (max-width: 600px) {
     .image-profile {
