--- a/scss/components/_global-var.scss
+++ b/scss/components/_global-var.scss
@@ -2,3 +2,9 @@ $yellow-color: #dfac13;
 $white-color: #efefef;
 $dark-color: #212529;
 $dark-bg: #161a1d;
+$dark: #000;
+
+// Fonts
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300&display=swap');
