--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Anton&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300&display=swap");
 nav {
   width: 100%;
   background-color: #dfac13;
@@ -90,18 +93,6 @@ nav {
 }
 
 /* Icons */
-.knowledge i {
-  font-size: 24px;
-  width: 40px;
-  height: 40px;
-  line-height: 40px;
-  background-color: #dfac13;
-  text-align: center;
-  border-radius: 50%;
-  margin: 0 8px;
-  color: #efefef;
-}
-
 .social-hero {
   text-align: left;
   padding-bottom: 25px;
@@ -134,9 +125,16 @@ nav {
 
 h1 {
   font-family: "Anton", sans-serif;
+  font-size: xx-large;
   color: #efefef;
   letter-spacing: 2px;
-  margin-bottom: 10px;
+  margin-top: 120px;
+  margin-bottom: 30px;
+  text-align: center;
+}
+
+.typewriter {
+  margin-top: 30px;
 }
 
 h3 {
@@ -147,23 +145,25 @@ h3 {
 
 p {
   color: #efefef;
+  font-family: "Roboto", sans-serif;
+  line-height: 130%;
 }
 
 .titulo {
   margin-bottom: 20px;
 }
 
-.btn-portafolio {
+.btn-portafolio, .btn-limpiar {
   border-radius: 10px;
   border: 2px solid #dfac13;
   background-color: #212529;
   padding: 10px 25px;
   color: #efefef;
   font-weight: 700;
-  font-family: "Arial";
+  font-family: "Roboto", sans-serif;
   letter-spacing: 1.5px;
 }
-.btn-portafolio:hover {
+.btn-portafolio:hover, .btn-limpiar:hover {
   background-color: #dfac13;
   color: #212529;
   cursor: pointer;
@@ -174,7 +174,7 @@ p {
   color: #efefef;
   padding: 10px 25px;
   font-weight: 700;
-  font-family: "Arial";
+  font-family: "Roboto", sans-serif;
   background-color: #dfac13;
   border-radius: 5px;
   border: none;
@@ -183,13 +183,51 @@ p {
 .btn:hover {
   color: #212529;
   cursor: pointer;
+  font-weight: 900;
+}
+
+.btn-download {
+  margin-bottom: 10%;
+}
+
+.container-formulario p {
+  text-align: center;
+}
+
+.form-control {
+  width: 50%;
+  margin: auto;
+}
+
+.form-input {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
   font-weight: 700;
 }
 
-.form-contact input, .form-contact textarea {
-  margin: 10px 0px;
+.button-form {
+  width: 50%;
+  margin: auto;
+  margin-bottom: 120px;
+  text-align: right;
 }
 
+@media only screen and (max-width: 600px) {
+  .button-form, .form-control {
+    width: 95%;
+    margin: auto;
+  }
+
+  .button-form {
+    margin-bottom: 140px;
+  }
+}
 .image-profile {
   width: 100%;
   height: auto;
@@ -201,14 +239,26 @@ p {
   .image-profile {
     display: none;
   }
+
+  .image-me {
+    margin-top: 30px;
+  }
 }
 .img-trabajos {
+  max-width: 500px;
+  width: 100%;
+  height: auto;
   border-radius: 10px;
+  margin-top: 20px;
 }
 
 .image-me {
   max-width: 200px;
-  border-radius: 10px;
+  border: 5px solid #efefef;
+  transform: rotate(-8deg);
+  margin-top: 30px;
+  margin-bottom: 30px;
+  box-shadow: 15px 15px 5px #000;
 }
 
 .container-hero {
@@ -258,24 +308,214 @@ p {
     display: none;
   }
 }
+.container-sobremi {
+  display: inline-block;
+  text-align: center;
+  border-bottom-right-radius: 50%;
+  background-color: #212529;
+}
+.container-sobremi .descrip-me {
+  margin: 0 25%;
+}
+
+#sec-01 {
+  background-color: #dfac13;
+}
+
+@media only screen and (max-width: 600px) {
+  .container-sobremi {
+    border-bottom-right-radius: 30%;
+  }
+  .container-sobremi .descrip-me {
+    margin: 0;
+  }
+}
+#sec-02 {
+  background-color: #212529;
+}
+#sec-02 .container-knowledge {
+  width: 100%;
+  display: inline-block;
+  background-color: #dfac13;
+  border-top-left-radius: 50%;
+}
+#sec-02 .knowledge-item {
+  padding: 5px 0;
+  font-size: 12px;
+  font-weight: 600;
+  text-align: left;
+  margin-left: 30px;
+}
+#sec-02 .knowledge-item i {
+  font-size: 24px;
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  background-color: #efefef;
+  text-align: center;
+  border-radius: 50%;
+  color: #dfac13;
+  margin-right: 10px;
+  box-shadow: 5px 5px 5px #212529;
+}
+#sec-02 #progress-bar {
+  background-color: #efefef;
+  height: 10px;
+  box-shadow: 2px 2px 2px #212529;
+  border-radius: 2px;
+  margin-left: 20px;
+}
+
+.knowledge {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  grid-template-rows: repeat(11, 1fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 20px;
+  align-items: center;
+  margin: 0 20%;
+}
+
+.item-0 {
+  grid-area: 1/1/2/2;
+}
+
+.item-2 {
+  grid-area: 2/1/3/2;
+}
+
+.item-3 {
+  grid-area: 3/1/4/2;
+}
+
+.item-4 {
+  grid-area: 4/1/5/2;
+}
+
+.item-5 {
+  grid-area: 5/1/6/2;
+}
+
+.item-6 {
+  grid-area: 6/1/7/2;
+}
+
+.item-7 {
+  grid-area: 7/1/8/2;
+}
+
+.item-8 {
+  grid-area: 8/1/9/2;
+}
+
+.item-9 {
+  grid-area: 9/1/10/2;
+}
+
+.item-10 {
+  grid-area: 10/1/11/2;
+}
+
+.item-11 {
+  grid-area: 11/1/12/2;
+}
+
+.progress-bar-12 {
+  grid-area: 1/2/2/3;
+}
+
+.progress-bar-13 {
+  grid-area: 2/2/3/3;
+}
+
+.progress-bar-14 {
+  grid-area: 3/2/4/3;
+}
+
+.progress-bar-15 {
+  grid-area: 4/2/5/3;
+}
+
+.progress-bar-16 {
+  grid-area: 5/2/6/3;
+}
+
+.progress-bar-17 {
+  grid-area: 6/2/7/3;
+}
+
+.progress-bar-18 {
+  grid-area: 7/2/8/3;
+}
+
+.progress-bar-19 {
+  grid-area: 8/2/9/3;
+}
+
+.progress-bar-20 {
+  grid-area: 9/2/10/3;
+}
+
+.progress-bar-21 {
+  grid-area: 10/2/11/3;
+}
+
+.progress-bar-22 {
+  grid-area: 11/2/12/3;
+}
+
+@media only screen and (max-width: 600px) {
+  #sec-02 .container-knowledge {
+    border-top-left-radius: 120px;
+  }
+
+  .knowledge {
+    margin: 0;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(11, 1fr);
+  }
+
+  .knowledge-item {
+    text-align: left;
+  }
+
+  #progress-bar {
+    margin: 0;
+    padding: 0;
+  }
+}
+#sec-03 {
+  background-color: #dfac13;
+}
+
+.container-trabajos {
+  display: inline-block;
+  width: 100%;
+  text-align: center;
+  border-top-left-radius: 50%;
+  background-color: #212529;
+}
+.container-trabajos p {
+  margin: 0 20%;
+}
+
+@media only screen and (max-width: 600px) {
+  .container-trabajos {
+    border-top-left-radius: 30%;
+  }
+  .container-trabajos p {
+    margin: 0 5px 10px 5px;
+  }
+}
 html, body {
-  max-width: 100% !important;
-  overflow-x: hidden !important;
+  max-width: 100%;
+  overflow-x: hidden;
   background-color: #212529;
   scroll-behavior: smooth;
 }
 
 strong {
   color: #dfac13;
-}
-
-hr {
-  color: #dfac13;
-  margin: 100px 0;
-}
-
-.caja-sobre-mi {
-  margin-top: 100px;
 }
 
 /*# sourceMappingURL=styles.css.map */
