--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -1,3 +1,35 @@
-.form-contact input, .form-contact textarea {
-    margin: 10px 0px;
+.container-formulario p{
+    text-align: center;
+}
+.form-control{
+    width: 50%;
+    margin: auto;
+}
+
+.form-input{
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 700;
+}
+.button-form{
+    width: 50%;
+    margin: auto;
+    margin-bottom: 120px;
+    text-align: right;
+}
+
+@media only screen and (max-width: 600px) {
+    .button-form, .form-control{
+        width: 95%;
+        margin: auto;
+    }
+    .button-form{
+        margin-bottom: 140px;
+    }
 }
