--- a/scss/components/_images.scss
+++ b/scss/components/_images.scss
@@ -9,11 +9,23 @@
     .image-profile {
         display: none;
     }
+    .image-me{
+        margin-top: 30px;
+    }
 }
 .img-trabajos {
+    max-width: 500px;
+    width: 100%;
+    height: auto;
     border-radius: 10px;
+    margin-top: 20px;
 }
 .image-me{
     max-width: 200px;
-    border-radius: 10px;
+    border: 5px solid $white-color;
+    transform: rotate(-8deg);
+    margin-top: 30px;
+    margin-bottom: 30px;
+
+    box-shadow: 15px 15px 5px $dark;
 }
