--- a/scss/components/_tittles.scss
+++ b/scss/components/_tittles.scss
@@ -1,9 +1,16 @@
 h1 {
     font-family: 'Anton', sans-serif;
+    font-size: xx-large;
     color: $white-color;
     letter-spacing: 2px;
-    margin-bottom:  10px;
+    margin-top: 120px;
+    margin-bottom:  30px;
+    text-align: center;
 }
+.typewriter{
+    margin-top: 30px;
+}
+
 h3 {
     color: $white-color;
     font-family: 'Open Sans', sans-serif;
@@ -11,6 +18,8 @@ h3 {
 }
 p {
     color: $white-color;
+    font-family: 'Roboto', sans-serif;
+    line-height: 130%;
 }
 .titulo {
     margin-bottom: 20px;
