--- a/scss/components/_conocimientos.scss
+++ b/scss/components/_conocimientos.scss
@@ -1,20 +1,11 @@
-#sec-02 {
-  background-color: $dark-color;
-
-  .container-knowledge{
-    width: 100%;
-    display: inline-block;
-    background-color: $yellow-color;
-    border-top-left-radius: 50%;
-  }
-
-  // Icono y parrafo
+// Icono y parrafo
   .knowledge-item {
     padding: 5px 0;
-    font-size: 12px;
+    font-size: 14px;
     font-weight: 600;
     text-align: left;
-    margin-left: 30px;
+    color: $white-color;
+    margin: 0;
   }
   .knowledge-item i {
     font-size: 24px;
@@ -26,112 +17,74 @@
     border-radius: 50%;
     color: $yellow-color;
     margin-right: 10px;
-    box-shadow: 5px 5px 5px $dark-color;
   }
+
+  .container-knowledge{
+    background-color: $dark-bg;
+    border-radius: 20rem 0;
+    height: auto;
+
+    .description-knowledge{
+      margin: 0 20%;
+    }
+    
+    p{
+       margin: 0 20px;
+    }
+    .knowledge h2{
+      text-align: center;
+    }
+    .knowledge div{
+      border: 1px solid $white-color;
+    }
+  }
+  // Clase padre grid
+  .knowledge{
+    display: grid;
+    grid-template-columns: repeat(4, auto);
+    grid-template-rows: .2fr 1fr;
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+
+    margin: 60px 6% 0 6%;
+}
  
-  // Barra de progreso
-  #progress-bar {
-    background-color: $white-color;
-    height: 10px;
-    box-shadow: 2px 2px 2px $dark-color;
-    border-radius: 2px;
-    margin-left: 20px;
-  }
-}
-
-.knowledge {
-  display: grid;
-  grid-template-columns: auto 1fr;
-  grid-template-rows: repeat(11, 1fr);
-  grid-column-gap: 0px;
-  grid-row-gap: 20px;
-
-  align-items: center;
-  margin: 0 20%;
-}
-
-
-.item-0 {
-  grid-area: 1 / 1 / 2 / 2;
-}
-.item-2 {
-  grid-area: 2 / 1 / 3 / 2;
-}
-.item-3 {
-  grid-area: 3 / 1 / 4 / 2;
-}
-.item-4 {
-  grid-area: 4 / 1 / 5 / 2;
-}
-.item-5 {
-  grid-area: 5 / 1 / 6 / 2;
-}
-.item-6 {
-  grid-area: 6 / 1 / 7 / 2;
-}
-.item-7 {
-  grid-area: 7 / 1 / 8 / 2;
-}
-.item-8 {
-  grid-area: 8 / 1 / 9 / 2;
-}
-.item-9 {
-  grid-area: 9 / 1 / 10 / 2;
-}
-.item-10 {
-  grid-area: 10 / 1 / 11 / 2;
-}
-.item-11 {
-  grid-area: 11 / 1 / 12 / 2;
-}
-.progress-bar-12 {
-  grid-area: 1 / 2 / 2 / 3;
-}
-.progress-bar-13 {
-  grid-area: 2 / 2 / 3 / 3;
-}
-.progress-bar-14 {
-  grid-area: 3 / 2 / 4 / 3;
-}
-.progress-bar-15 {
-  grid-area: 4 / 2 / 5 / 3;
-}
-.progress-bar-16 {
-  grid-area: 5 / 2 / 6 / 3;
-}
-.progress-bar-17 {
-  grid-area: 6 / 2 / 7 / 3;
-}
-.progress-bar-18 {
-  grid-area: 7 / 2 / 8 / 3;
-}
-.progress-bar-19 {
-  grid-area: 8 / 2 / 9 / 3;
-}
-.progress-bar-20 {
-  grid-area: 9 / 2 / 10 / 3;
-}
-.progress-bar-21 {
-  grid-area: 10 / 2 / 11 / 3;
-}
-.progress-bar-22 {
-  grid-area: 11 / 2 / 12 / 3;
-}
+.tittle-programming { grid-area: 1 / 1 / 2 / 2; border-top-left-radius: 30px;}
+.programming-languages { grid-area: 2 / 1 / 3 / 2; border-bottom-left-radius: 30px;}
+.tittle-web { grid-area: 1 / 2 / 2 / 3; }
+.web-design { grid-area: 2 / 2 / 3 / 3; }
+.tittle-videogames { grid-area: 1 / 3 / 2 / 4; }
+.videogames-dev { grid-area: 2 / 3 / 3 / 4; }
+.tittle-other { grid-area: 1 / 4 / 2 / 5; border-top-right-radius: 30px;}
+.other { grid-area: 2 / 4 / 3 / 5; border-bottom-right-radius: 30px;}
 
 @media only screen and (max-width: 600px) {
-  #sec-02 .container-knowledge{
-    border-top-left-radius: 120px;
+  h2{
+    font-size: .8rem;
   }
-  .knowledge {
+  .container-knowledge .description-knowledge{
+    margin: 30px 5px;
+  }
+  .container-knowledge{
+    height: auto;
+  }
+
+  .knowledge{
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+    grid-template-rows: .2fr 1fr .2fr 1fr;
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+
     margin: 0;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: repeat(11, 1fr);
   }
-  .knowledge-item {
-    text-align: left;
-  }
-  #progress-bar {
-    margin: 0;
-    padding: 0;
-  }
+  .tittle-programming { grid-area: 1 / 1 / 2 / 2; border-top-left-radius: 30px;}
+  .programming-languages { grid-area: 2 / 1 / 3 / 2; border-bottom-left-radius: 30px;}
+  .tittle-web { grid-area: 1 / 2 / 2 / 3; border-top-right-radius: 30px;}
+  .web-design { grid-area: 2 / 2 / 3 / 3; border-bottom-right-radius: 30px;}
+  .tittle-videogames { grid-area: 3 / 1 / 4 / 2; border-top-left-radius: 30px;}
+  .videogames-dev { grid-area: 4 / 1 / 5 / 2; border-bottom-left-radius: 30px;}
+  .tittle-other { grid-area: 3 / 2 / 4 / 3; border-top-right-radius: 30px;}
+  .other { grid-area: 4 / 2 / 5 / 3; border-bottom-right-radius: 30px;}
+
 }
