--- a/scss/components/_tittles.scss
+++ b/scss/components/_tittles.scss
@@ -3,7 +3,7 @@ h1 {
     font-size: xx-large;
     color: $white-color;
     letter-spacing: 2px;
-    margin-top: 120px;
+    margin-top: 100px;
     margin-bottom:  30px;
     text-align: center;
 }
@@ -12,10 +12,16 @@ h1 {
 }
 
 h3 {
+    font-size: .9rem;
     color: $white-color;
     font-family: 'Open Sans', sans-serif;
     letter-spacing: 2px;
 }
+h2{
+    color: $white-color;
+    font-family: 'Open Sans', sans-serif;
+}
+
 p {
     color: $white-color;
     font-family: 'Roboto', sans-serif;
