--- a/scss/components/_tittles.scss
+++ b/scss/components/_tittles.scss
@@ -30,7 +30,9 @@ p {
 .titulo {
     margin-bottom: 20px;
 }
-
+.text-center{
+    text-align: center;
+}
 // @media only screen and (max-width: 600px){
 
 // }
