--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -17,14 +17,17 @@
         color: red;
     }
 }
-.container-formulario {
-    display: grid;
-    grid-template-columns: 1fr .5fr;
-    grid-template-rows: repeat(2, .2fr);
-    grid-column-gap: 0px;
-    grid-row-gap: 0px;
+.tittle-contact{
+    margin-top: 200px;
 }
-    
-    .div1 { grid-area: 1 / 1 / 2 / 2; }
-    .div2 { grid-area: 1 / 2 / 2 / 3; }
-    .div3 { grid-area: 2 / 1 / 3 / 3; }
+
+//fletbox
+#sec-04{
+    display: flex;
+    flex-direction: column;
+    justify-content: center; 
+    margin: 0 15%;
+    margin-bottom: 100px;
+}
+
+
