--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,20 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Anton&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300&display=swap");
+@keyframes popup {
+  0% {
+    width: 0rem;
+    height: 0rem;
+  }
+  50% {
+    width: 6rem;
+    height: 6rem;
+  }
+  100% {
+    width: 4.2rem;
+    height: 4.2rem;
+  }
+}
 nav {
   width: 100%;
   background-color: #dfac13;
@@ -461,6 +475,51 @@ p {
   background: #dfac13;
 }
 
+.up-div {
+  position: fixed;
+  bottom: 1rem;
+  right: 1rem;
+  width: 2rem;
+  height: 2rem;
+  z-index: -1;
+}
+.up-div .up-button {
+  width: 0rem;
+  height: 0rem;
+  background-color: #dfac13;
+  border-radius: 50%;
+  cursor: pointer;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: -1;
+}
+.up-div i {
+  position: absolute;
+  font-size: 30px;
+  color: #212529;
+  text-decoration: none;
+  top: 48%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  scale: 0;
+  transition: 0.2s;
+}
+
+.show {
+  z-index: 10;
+}
+.show .up-button {
+  animation: popup 0.3s ease-in-out;
+  width: 4.2rem;
+  height: 4.2rem;
+  z-index: 11;
+}
+.show i {
+  transform: translate(-50%, -50%);
+  scale: 1;
+}
+
 .container-trabajos {
   display: inline-block;
   width: 100%;
@@ -502,10 +561,17 @@ strong {
 }
 .loading .txt-loading {
   position: fixed;
-  left: 40%;
-  right: 40%;
-  top: -40px;
+  right: 0;
+  left: 0;
+  margin-right: auto;
+  margin-left: auto;
   color: #212529;
+}
+
+@media only screen and (max-width: 600px) {
+  .loading .txt-loading {
+    top: -100px;
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
