--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -29,14 +29,20 @@ strong {
     height: 100%;
     z-index: 5;
     background: url('/img/XOsX.gif') 50% 50% no-repeat $yellow-color;
-    
-   
 
     .txt-loading{
         position: fixed;
-        left: 40%;
-        right: 40%;
-        top: -40px;
+        right: 0;
+        left: 0;
+        margin-right: auto;
+        margin-left: auto;
         color: $dark-color;
+    }
+}
+@media only screen and (max-width: 600px) {
+    .loading{
+        .txt-loading{
+            top: -100px;
+        }
     }
 }
