Added some styles and fixed the animations

--- a/scss/components/_conocimientos.scss
+++ b/scss/components/_conocimientos.scss
@@ -50,6 +50,11 @@
     .tec { grid-area: 2 / 1 / 3 / 2; background-color: $dark-bg; }
     .games { grid-area: 2 / 2 / 3 / 3; background-color: $dark-bg;}
   }
+
+  .container-knowledge{
+    width: 90%;
+    margin: auto;
+  }
     
     
 
