--- a/scss/components/_icons.scss
+++ b/scss/components/_icons.scss
@@ -45,6 +45,7 @@
 #spin2{
   position: relative;
   right: 20px;
+  top: -8px;
   animation-duration: 5s;
   animation-iteration-count: infinite;
   animation-timing-function: linear;
