--- a/css/styles.css
+++ b/css/styles.css
@@ -157,6 +157,7 @@ nav {
 #spin2 {
   position: relative;
   right: 20px;
+  top: -8px;
   animation-duration: 5s;
   animation-iteration-count: infinite;
   animation-timing-function: linear;
@@ -251,7 +252,7 @@ p {
 }
 
 .form-input {
-  width: 95%;
+  width: 90%;
   height: 30px;
   background-color: #212529;
   border: 0;
@@ -274,13 +275,50 @@ p {
 }
 
 #sec-04 {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  margin: 0 15%;
-  margin-bottom: 100px;
+  width: 90%;
+  margin: 0 auto 200px auto;
 }
 
+.div-1 i {
+  font-size: 10rem;
+  color: #dfac13;
+  text-align: center;
+  margin-top: 20px;
+}
+
+.form-padre {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 0.5fr;
+  grid-column-gap: 15px;
+  grid-row-gap: 15px;
+}
+.form-padre .div-1 {
+  grid-area: 1/1/3/2;
+}
+.form-padre .div-2 {
+  grid-area: 1/2/3/3;
+}
+
+@media only screen and (max-width: 600px) {
+  .form-padre {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+  }
+  .form-padre .div0-1 {
+    grid-area: 1/1/2/2;
+  }
+  .form-padre .div0-2 {
+    grid-area: 2/1/3/2;
+  }
+
+  .div-1 i {
+    font-size: 5rem;
+  }
+}
 .image-profile {
   width: 100%;
   height: auto;
@@ -316,12 +354,12 @@ p {
 
 .container-hero {
   display: grid;
+  width: 90%;
+  margin: auto;
   grid-template-columns: repeat(5, auto);
   grid-template-rows: repeat(3, 0.2fr);
   justify-content: center;
   position: absolute;
-  margin-left: auto;
-  margin-right: auto;
   top: 30%;
   left: 0;
   right: 0;
@@ -362,7 +400,8 @@ p {
   }
 }
 .container-sobremi {
-  display: inline-block;
+  width: 90%;
+  margin: auto;
   text-align: center;
   border-bottom-right-radius: 50%;
   background-color: #212529;
@@ -437,6 +476,11 @@ p {
 .knowledge .games {
   grid-area: 2/2/3/3;
   background-color: #161a1d;
+}
+
+.container-knowledge {
+  width: 90%;
+  margin: auto;
 }
 
 @media only screen and (max-width: 700px) {
@@ -521,14 +565,40 @@ p {
 }
 
 .container-trabajos {
-  display: inline-block;
   width: 100%;
+  margin: auto;
+  padding: 100px 0;
   text-align: center;
-  border-top-left-radius: 50%;
-  background-color: #212529;
+  background-color: #161a1d;
 }
 .container-trabajos p {
   margin: 0 20%;
+}
+.container-trabajos .h1-trabajos {
+  margin: 0;
+}
+
+.trabajos-up, .trabajos-down {
+  height: 150px;
+  background-color: #161a1d;
+}
+
+.trabajos-up {
+  margin-top: 150px;
+}
+.trabajos-up .trabajos-radius-up {
+  height: 140px;
+  background-color: #212529;
+  border-radius: 0 0 50% 50%;
+}
+
+.trabajos-down {
+  margin-bottom: 150px;
+}
+.trabajos-down .trabajos-radius-down {
+  height: 150px;
+  background-color: #212529;
+  border-radius: 50% 50% 0 0;
 }
 
 @media only screen and (max-width: 600px) {
@@ -539,8 +609,11 @@ p {
     margin: 0 5px 10px 5px;
   }
 }
+* {
+  height: auto;
+}
+
 html, body {
-  max-width: 100%;
   overflow-x: hidden;
   background-color: #212529;
   scroll-behavior: smooth;
@@ -566,6 +639,11 @@ strong {
   margin-right: auto;
   margin-left: auto;
   color: #212529;
+}
+
+#hr_separation {
+  border-color: #dfac13;
+  margin: 10% 0;
 }
 
 @media only screen and (max-width: 600px) {
