--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -1,5 +1,5 @@
 .form-input{
-    width: 95%;
+    width: 90%;
     height: 30px;
     background-color: $dark-color;
     border: 0;   
@@ -21,13 +21,47 @@
     margin-top: 200px;
 }
 
-//fletbox
 #sec-04{
-    display: flex;
-    flex-direction: column;
-    justify-content: center; 
-    margin: 0 15%;
-    margin-bottom: 100px;
+    width: 90%;
+    margin: 0 auto 200px auto;
 }
+//icono sobre
+.div-1{
+    i{
+        font-size: 10rem;
+        color: $yellow-color;
+        text-align: center;
+        margin-top: 20px;
+    }
+}
+.form-padre {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: .5fr;//repeat(2, 1fr);
+    grid-column-gap: 15px;
+    grid-row-gap: 15px;
 
+    .div-1 { grid-area: 1 / 1 / 3 / 2; }
+    .div-2 { grid-area: 1 / 2 / 3 / 3; }
+}
+    
+@media only screen and (max-width: 600px) {
+    .form-padre {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(2, 1fr);
+        grid-column-gap: 0px;
+        grid-row-gap: 0px;
+    
+        .div0-1 { grid-area: 1 / 1 / 2 / 2; }
+        .div0-2 { grid-area: 2 / 1 / 3 / 2; }
+    
+    }
+    .div-1{
+        i{
+            font-size: 5rem;
+        }
+    }
+}  
 
+    
