--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -1,12 +1,14 @@
 .container-hero{
     display: grid;
+    width: 90%;
+    margin: auto;
     grid-template-columns: repeat(5, auto);
     grid-template-rows: repeat(3, .2fr);
     justify-content: center;
 
     position: absolute;
-    margin-left: auto;
-    margin-right: auto;
+    // margin-left: auto;
+    // margin-right: auto;
     top: 30%;
     left: 0;
     right: 0;
