--- a/scss/components/_sobremi.scss
+++ b/scss/components/_sobremi.scss
@@ -1,5 +1,6 @@
 .container-sobremi{
-    display: inline-block;
+    width: 90%;
+    margin: auto;
     text-align: center;
     border-bottom-right-radius: 50%;
     background-color: $dark-color;
