--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -12,8 +12,12 @@
 @import "components/scroll";
 @import "components/trabajos";
 
+*{
+    height: auto;
+}
+
 html, body {
-    max-width: 100%;
+    // max-width: 90%;
     overflow-x: hidden;
     background-color: $dark-color;
     scroll-behavior: smooth;
@@ -38,6 +42,11 @@ strong {
         margin-left: auto;
         color: $dark-color;
     }
+}
+
+#hr_separation {
+    border-color: $yellow-color;
+    margin: 10% 0;
 }
 @media only screen and (max-width: 600px) {
     .loading{
