--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -1,7 +1,10 @@
 /*FOOTER*/
 .footer-basic {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
     padding: 40px 0;
-    background-color: $dark-bg !important;
+    background-color: $dark-bg ;
 
     .copyright {
       margin-top: 15px;
