--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -11,6 +11,7 @@
 @import "components/conocimientos";
 @import "components/scroll";
 @import "components/trabajos";
+@import "components/gracias";
 
 *{
     height: auto;
