--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -1,7 +1,7 @@
 /*FOOTER*/
 .footer-basic {
-  position: absolute;
-  bottom: 0;
+  // position: absolute;
+  // bottom: 0;
   width: 100%;
     padding: 40px 0;
     background-color: $dark-bg ;
